--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="top"></div>
       <div class="shadow"></div>
       <div class="text1">
-        <h2>Dear teacher, an invitation for you, tap here 👇</h2>
+        <h2>Dear teacher, Click the envelope to get the invitation here👇</h2>
       </div>
       Finished reading? <a href="yes/index.html">Click here</a>
     </div>
