--- a/yes/yes.html
+++ b/yes/yes.html
@@ -19,7 +19,7 @@
       </button>
       <script>
         function nextPage() {
-          window.location.href = "../index.html";
+          window.location.href = "https://invitation.magarnirmal.com.np/";
         }
 
         function moveButton() {
